# invoice-reimburse-ocr

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  需求手册.md
src/invoice_reimburse_ocr/: __init__.py  cli.py  dedup.py  exchange.py  exporter.py  file_scanner.py  models.py  ocr.py  parser.py  pipeline.py  preprocessor.py  validator.py
tests/: test_cli.py  test_exchange.py  test_file_scanner.py  test_main_entry.py  test_parser.py  test_pipeline.py  test_preprocessor.py  test_validator.py
