[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-reimburse-ocr"
version = "0.1.0"
description = "本地发票批量识别与报销 Excel 导出工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "opencv-python>=4.8.0",
]
test = [
    "pytest>=7.4.0",
]

[project.scripts]
invoice-ocr = "invoice_reimburse_ocr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
